# campus-numerique-human-vs-llm

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
app/: app.py  utils.py
app/views/: creativity.py  culture.py  home.py  model.py  rare_mots.py  take_the_test.py
data/: .~lock.model-energy-2_11_2026.csv#  .~lock.scores_automatiques.csv#  all_words_fr.txt  all_words_fr_en.txt  all_words_human.txt  all_words_human_en.txt  cosine_similairity.csv  cosine_similairity_neigbor.csv  dataset_biais_culturels_v2.xlsx  dataset_complet_avec_reponses.xlsx  french_top_10000.csv  llm_judge_scores.xlsx  model-energy-2_11_2026.csv  reponses1.xlsx  reponses2.xlsx  scores_automatiques.csv  words10_cleaned.csv  words10_embeddings_LaBSE.csv  words10_embeddings_LaBSE.pkl  words10_embeddings_fasttext.pkl  words10_embeddings_fasttext_aligned.pkl  words10_embeddings_paraphrase-multilingual-MiniLM-L12-v2.csv  words10_embeddings_paraphrase-multilingual-MiniLM-L12-v2.pkl
models/: convert_models.py
notebooks/: 3_add_info_cosine_cim.ipynb  4_text_for_wordclouds.ipynb  5_cosine_inbetween_models.ipynb  add_info_cosine_cim.ipynb  calculate_cosine_similairity.ipynb  cosine_neighbors.ipynb  cosine_similairity.ipynb  cosine_similairity_test.ipynb  generate_embeddings.ipynb  poc_ia_culture.ipynb  similarity_matrix_fr.csv  words_rarity.ipynb
