[project]
name = "llm-vs-human"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "rapidfuzz>=3.14.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "wordcloud>=1.9.6",
]
