[project]
name = "llm-vs-human"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "fasttext-wheel>=0.9.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=2.2,<3",
    "rapidfuzz>=3.14.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.32.0,<=1.38.0",
    "wordcloud>=1.9.6",
]
