[project]
name = "llm-vs-human"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "deep-translator>=1.11.4",
    "fasttext-wheel>=0.9.2",
    "gensim>=4.4.0",
    "googletrans>=4.0.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=2.2,<3",
    "plotly>=6.6.0",
    "rapidfuzz>=3.14.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.32.0,<=1.38.0",
    "unidecode>=1.4.0",
    "wordcloud>=1.9.6",
]
